Refactoring, hydrate method for DAO, some cleaning...